file handling after HUP signals. Added lowercase options for POP3 USER command
and maildir database lookups. Added support for qmail-pop3d style UIDLs. (Adds
uidl-style config option) maildir-ignore-folders now uses tokens_new so
folders may be separated by spaces or tabs. Remove any maildirsize file, for
compliance with Maildir++ (thanks to Arkadiusz Miskiewicz). Added support
for syslog like log levels. (log-level config option)

1.5.3

Fixed a couple of errors in the man page and configuration directives which
got lost; thanks to Haris Hudji. Increased the default value for max-children
from 16 to 100. Fixed a typo in Makefile.am. Incorporated a patch from Diego
Alvarez to allow substitution variables to be used in LDAP base configurations.
Altered the apop-only option to affect unsecured connections only, following a
suggestion by Dave Baker. Fixed the `mass virtual hosting' option, following a
bug report from Matthew Trent. Improved performance under heavy load; thanks
to Larry Chancy for helping to identify this problem. Also added an optional
cache for authentication results; most users will not need this, but it may
help for very busy servers. Fixed a bug in the TLS implementation which could
cause connections to be dropped by the server; thanks to Dave Baker, Jens
Liebchen and others for assistance with this.

1.5.2

Fixed some omissions in the man page. Fixed a bug which caused bind(2) to fail
on some systems. Corrected a small error in README.bulletins.

Added the log-bad-passwords option, inspired by a patch from Kevin Bonner.

Fixed a bug in password handling which prevented passwords in the MySQL format
from working.

1.5.1

tpop3d now supports the WHOSON protocol (http://whoson.sourceforge.net/) for
POP-before-SMTP relaying, thanks to Arkadiusz Miskiewicz.

Added support for `mass virtual hosting', where the domain name used for a
connection is based upon the name associated with the address to which a client
connects.
