@@ -14,8 +14,9 @@ tpop3d_SOURCES = auth_mysql.c auth_pgsql.c auth_ldap.c auth_other.c auth_gdbm.c 
                  authcache.c authswitch.c buffer.c cfgdirectives.c config.c \
                  connection.c ioabs_tcp.c ioabs_tls.c listener.c locks.c \
                  logging.c mailbox.c maildir.c mailspool.c main.c md5c.c \
-                 netloop.c password.c pidfile.c pop3.c signals.c stringmap.c \
-                 strtok_r.c substvars.c tls.c tokenise.c util.c vector.c
+                 netloop.c password.c pidfile.c poll.c pop3.c signals.c \
+                 stringmap.c strtok_r.c substvars.c tls.c tokenise.c util.c \
+                 vector.c
 
 noinst_HEADERS = auth_mysql.h auth_ldap.h auth_other.h auth_perl.h auth_pam.h \
                  auth_passwd.h auth_flatfile.h auth_pgsql.h authswitch.h \
