@@ -13,6 +13,7 @@ static const char rcsid[] = "$Id$";
 
 #include <sys/types.h>
 
+#include <errno.h>
 #include <unistd.h>
 
 #include <sys/time.h>
